# Base

./: .gitignore  .gitmodules  README.md  banana_recovered.ply  ros2.def  tiago_grasp.rviz
common/helpers/cv2_img/: CMakeLists.txt  README.md  package.xml  setup.py
common/helpers/cv2_img/doc/: PREREQUISITES.md  USAGE.md
common/helpers/cv2_img/src/: __init__.py
common/helpers/cv2_pcl/: CMakeLists.txt  package.xml  setup.py
common/speech/lasr_speech_recognition_interfaces/: CMakeLists.txt  README.md  package.xml
common/speech/lasr_speech_recognition_interfaces/srv/: TranscribeAudio.srv
common/speech/lasr_speech_recognition_whisper/: CMakeLists.txt  README.md  package.xml  requirements.in  requirements.txt  setup.cfg  setup.py  test.m4a
common/speech/lasr_speech_recognition_whisper/doc/: USAGE.md
common/speech/lasr_speech_recognition_whisper/lasr_speech_recognition_whisper/: simple_transcribe_microphone.py  transcribe_microphone.py  transcribe_microphone_server.py
common/speech/lasr_speech_recognition_whisper/nodes/: simple_transcribe_microphone  transcribe_microphone  transcribe_microphone_server
common/speech/lasr_speech_recognition_whisper/scripts/: list_microphones.py  microphone_tuning_test.py  repeat_after_me.py  test_microphones.py  test_speech_server.py
common/speech/lasr_speech_recognition_whisper/src/: __init__.py
common/vision/lasr_vision_bodypix/: CMakeLists.txt  README.md  package.xml  requirements.in  requirements.txt  setup.py
common/vision/lasr_vision_bodypix/examples/: keypoint_relay.py  mask_relay.py  relay  wave_relay.py
common/vision/lasr_vision_bodypix/launch/: bodypix.launch  bodypix_launch.py  camera.launch  camera_keypoint.launch  camera_keypoint_launch.py  camera_mask.launch  camera_mask_launch.py  camera_wave_launch.py  gesture_service.launch  keypoint_service.launch  mask_service.launch  service.launch  tiago_keypoint_launch.py  tiago_mask_launch.py  v4l2_camera_launch.py
common/vision/lasr_vision_bodypix/nodes/: bodypix_services.py  gesture_service.py  keypoint_service.py  mask_service.py  service
common/vision/lasr_vision_bodypix/scripts/: test-face.py  test.py
common/vision/lasr_vision_cropped_detection/: CMakeLists.txt  package.xml  setup.py
common/vision/lasr_vision_cropped_detection/examples/: request.py
common/vision/lasr_vision_cropped_detection/launch/: cropped_detection.launch  cropped_detection_launch.py  setup.launch  tiago_cropped_detection_launch.py
common/vision/lasr_vision_cropped_detection/nodes/: cropped_detection_service.py  service.py
common/vision/lasr_vision_interfaces/: CMakeLists.txt  package.xml
common/vision/lasr_vision_interfaces/msg/: BodyPixKeypoint.msg  BodyPixMask.msg  CResponse.msg  Detection3D.msg
common/vision/lasr_vision_interfaces/srv/: BodyPixKeypointDetection.srv  BodyPixMaskDetection.srv  BodyPixWaveDetection.srv  ClipLearnFace.srv  CroppedDetection.srv  DetectFaces.srv  DetectWave.srv  LearnFace.srv  Recognise.srv  Vqa.srv  YoloDetection.srv  YoloDetection3D.srv
common/vision/lasr_vision_msgs/: CMakeLists.txt  README.md  package.xml
common/vision/lasr_vision_msgs/action/: EyeTracker.action  GetName.action  LearnFace.action
common/vision/lasr_vision_msgs/msg/: BodyPixKeypoint.msg  BodyPixKeypointNormalized.msg  BodyPixMask.msg  BodyPixMaskRequest.msg  BodyPixPose.msg  CDRequest.msg  CDResponse.msg  ColourPrediction.msg  Description.msg  Detection.msg  Detection3D.msg  Detection3DArray.msg  Direction.msg  FeatureWithColour.msg  Keypoint.msg  Keypoint3D.msg  Keypoint3DList.msg  KeypointList.msg  LangSamDetection.msg  Sam2BboxWithFlag.msg  Sam2PointsWithLabelsAndFlag.msg  Sam2PromptArrays.msg
common/vision/lasr_vision_msgs/srv/: AddFace.srv  BodyPixDetection.srv  BodyPixKeypointDetection.srv  BodyPixMaskDetection.srv  CheckKnownPeople.srv  ClipImageEncoder.srv  ClipLearnFace.srv  ClipRecogniseFace.srv  CroppedDetection.srv  DetectFaces.srv  DetectWave.srv  GroundedSam.srv  LangSam.srv  LearnFace.srv  PointingDirection.srv  Recognise.srv  Recognise3D.srv  TorchFaceFeatureDetection.srv  TorchFaceFeatureDetectionDescription.srv  Vqa.srv  YoloDetection.srv  YoloDetection3D.srv  YoloPoseDetection.srv  YoloPoseDetection3D.srv
common/vision/lasr_vision_yolov8/: CMakeLists.txt  README.md  package.xml  requirements.in  requirements.txt  setup.cfg  setup.py
common/vision/lasr_vision_yolov8/doc/: EXAMPLE.md  TECHNICAL.md  USAGE.md
common/vision/lasr_vision_yolov8/examples/: construct_mask  relay_3d
common/vision/lasr_vision_yolov8/lasr_vision_yolov8/: __init__.py  relay_test.py  service.py
common/vision/lasr_vision_yolov8/launch/: camera.launch  camera_launch.xml  demo.launch  demo_launch.xml  service.launch  service_launch.py  service_launch.xml  testing.launch
common/vision/lasr_vision_yolov8/nodes/: service  service.py
common/vision/lasr_vision_yolov8/src/: __init__.py
skills/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
skills/config/: demo.yaml  motions.yaml
skills/launch/: demo.launch  gesture_with_camera.launch  joint_leg_tracker.launch  pointing.launch  unit_test_describe_people.launch
skills/scripts/: test_describe_people.py  test_learn_face.py  test_look_at_person.py  unit_test_adjust_camera.py  unit_test_describe_people.py
skills/src/lasr_skills/: Detect.py  __init__.py  _follow_person.py  access_node.py  adjust_camera.py  ask_and_listen.py  check_door_status.py  check_known_people.py  clip_vqa.py  count_people.py  depth_to_cloud.launch  describe_people.py  detect.py  detect_3d.py  detect_3d_in_area.py  detect_3d_in_area_lang_sam.py  detect_all_in_polygon.py  detect_all_in_polygon_sensor_data.py  detect_clothing.py  detect_dict.py  detect_door_opening.py  detect_faces.py  detect_gesture.py  detect_gesture_3d.py  detect_keypoints_3d.py  detect_nearest.py  detect_objects.py  detect_objects_3d.py  detect_objects_in_area_3d.py  detect_people.py  detect_people_3d.py  detect_people_in_area_3d.py  detect_pointing.py  detect_pose.py  detect_shirt_color.py  detect_wave.py  door_open.py  estimate_cloth_colour.py  eye_tracker.py  face_person.py  (+40 more)
(+2241 files in other folders)
