<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>skills</name>
    <version>0.0.0</version>
    <description>The skills package</description>
    <maintainer email="maayan.armony@gmail.com">maayan</maintainer>
    <license>MIT</license>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>
    <depend>lasr_vision_interfaces</depend>
    <depend>smach</depend>
    <depend>lasr_vector_databases_interfaces</depend>

    <depend>cv2_img</depend>
    <depend>cv2_pcl</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
