<?xml version="1.0"?>
<package format="3">
  <name>lasr_vision_interfaces</name>
  <version>0.0.0</version>
  <description>Messages and services for vision processing</description>
  <maintainer email="me@insrt.uk">Paul Makles</maintainer>
  
  <license>MIT</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for message and service generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  

  <!-- Dependencies for sensor messages and built-in interfaces -->
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>


  <!-- ROS2 specific group for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>



